ezyplot-x1/force-app/main/default/objects/LH_Opp__c/LH_Opp__c.object-meta.xml
<CustomObject>
    <label>LH Opp</label>
    <nameField>
        <label>Address (link to right side)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LH Opp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>