ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Agent_link_to_right_side__c.field-meta.xml
<CustomField>
    <fullName>Agent_link_to_right_side__c</fullName>
    <label>Agent (link to right side)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>