ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Auction_potential_OMV_05x_works_PP__c.field-meta.xml
<CustomField>
    <fullName>Auction_potential_OMV_05x_works_PP__c</fullName>
    <label>Auction potential (OMV-0.5x works) /PP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>