ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>