ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/COST_Lease_survey_and_premium_negotiati__c.field-meta.xml
<CustomField>
    <fullName>COST_Lease_survey_and_premium_negotiati__c</fullName>
    <label>COST: Lease survey and premium negotiati</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>