ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/COST_Refurbishment__c.field-meta.xml
<CustomField>
    <fullName>COST_Refurbishment__c</fullName>
    <label>COST: Refurbishment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>