ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/COST_Rent_IN_until_sale_months__c.field-meta.xml
<CustomField>
    <fullName>COST_Rent_IN_until_sale_months__c</fullName>
    <label>COST: Rent IN until sale (months)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>