ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/COST_SELL_Legals_Estate_agent_sell__c.field-meta.xml
<CustomField>
    <fullName>COST_SELL_Legals_Estate_agent_sell__c</fullName>
    <label>COST: (SELL) Legals + Estate agent sell</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>