ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/COST_Stamp_duty__c.field-meta.xml
<CustomField>
    <fullName>COST_Stamp_duty__c</fullName>
    <label>COST:  Stamp duty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>