ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Delayed_compl_agreed__c.field-meta.xml
<CustomField>
    <fullName>Delayed_compl_agreed__c</fullName>
    <label>Delayed compl. agreed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>