ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Extension_premium__c.field-meta.xml
<CustomField>
    <fullName>Extension_premium__c</fullName>
    <inlineHelpText>Based on Years left, Ground rent and OMV</inlineHelpText>
    <label>Extension premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>