ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Followup_Action__c.field-meta.xml
<CustomField>
    <fullName>Followup_Action__c</fullName>
    <label>Followup Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>