ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Followup_Due_by__c.field-meta.xml
<CustomField>
    <fullName>Followup_Due_by__c</fullName>
    <label>Followup Due by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>