ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Lease_epiry_date__c.field-meta.xml
<CustomField>
    <fullName>Lease_epiry_date__c</fullName>
    <label>Lease epiry date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>