ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Open_market_ad__c.field-meta.xml
<CustomField>
    <fullName>Open_market_ad__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Pulled from Property Data</inlineHelpText>
    <label>Open market ad</label>
    <referenceTo>PD_Ask_Data__c</referenceTo>
    <relationshipLabel>LH Opp</relationshipLabel>
    <relationshipName>LH_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>