ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Our_offer__c.field-meta.xml
<CustomField>
    <fullName>Our_offer__c</fullName>
    <label>Our offer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>