ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Post_code__c.field-meta.xml
<CustomField>
    <fullName>Post_code__c</fullName>
    <label>Post code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>