ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Premium_agreed_pre_exchange__c.field-meta.xml
<CustomField>
    <fullName>Premium_agreed_pre_exchange__c</fullName>
    <label>Premium agreed pre exchange</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>