ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Price_as_advertised__c.field-meta.xml
<CustomField>
    <fullName>Price_as_advertised__c</fullName>
    <label>Price as advertised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>