ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Profit_based_on_OFFER_or_asking_price_IN__c.field-meta.xml
<CustomField>
    <fullName>Profit_based_on_OFFER_or_asking_price_IN__c</fullName>
    <label>Profit based on OFFER or asking price IN</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>