ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Rental_income_PCM__c.field-meta.xml
<CustomField>
    <fullName>Rental_income_PCM__c</fullName>
    <label>Rental income PCM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>