ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Tenant_in_place__c.field-meta.xml
<CustomField>
    <fullName>Tenant_in_place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tenant in place</label>
    <type>Checkbox</type>
</CustomField>