ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/URL_2nd_listing__c.field-meta.xml
<CustomField>
    <fullName>URL_2nd_listing__c</fullName>
    <label>URL (2nd listing)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>