ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/URL_link_to_right_side__c.field-meta.xml
<CustomField>
    <fullName>URL_link_to_right_side__c</fullName>
    <label>URL (link to right side)</label>
    <type>Url</type>
</CustomField>