ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/Years_left_on_lease__c.field-meta.xml
<CustomField>
    <fullName>Years_left_on_lease__c</fullName>
    <label>Years left on lease</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>