ezyplot-x1/force-app/main/default/objects/LH_Opp__c/fields/YIELD_HOLD__c.field-meta.xml
<CustomField>
    <fullName>YIELD_HOLD__c</fullName>
    <label>YIELD: (HOLD)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>