ezyplot-x1/force-app/main/default/objects/LH_Opp__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>URL_link_to_right_side__c</columns>
    <columns>Agent_link_to_right_side__c</columns>
    <columns>Days_on_market__c</columns>
    <columns>Notes__c</columns>
    <columns>Our_offer__c</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Followup_Action__c</columns>
    <columns>Followup_Due_by__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>